2006-12-07  Ralf Angeli  <angeli@caeruleus.net>

	* tex-bar.el (TeX-install-toolbar, LaTeX-install-toolbar): Add
	`toolbarx-refresh' to `TeX-PDF-mode-hook' in the current buffer
	only.

2006-12-06  Ralf Angeli  <angeli@caeruleus.net>

	* context-nl.el (ConTeXt-nl-mode-initialization): Use correct
	syntax for prompting for an optional argument in case of \items
	macro.

	* context-en.el (ConTeXt-en-mode-initialization): Use correct
	syntax for prompting for an optional argument in case of \items
	macro.

	* context.el (ConTeXt-arg-setup): Capitalize prompt.

2006-12-04  Miguel Frasson  <mvsfrasson@gmail.com>

	* toolbar-x.el (toolbarx-emacs-add-button):
	Insert buttons in KEYMAP (new arg).
	Unnecessary &optional removed.
	Removed broken code for fake-button `:new-line'.
	(toolbarx-emacs-refresh-process-button-or-insert-list):
	New arg KEYMAP inserted.
	Unnecessary &optional removed.
	(toolbarx-emacs-refresh):
	Fixed bug with `tool-bar-map' let-bound and made local variable.
	(toolbarx-xemacs-refresh-process-button-or-insert-list):
	Docstring improved..
	(toolbarx-xemacs-refresh):
	Using `nreverse' directly inside `let'.
	`nreverse' is applied to lists generated from actual
	data-structures, leaving such data-structures alone.
	
2006-11-26  Ralf Angeli  <angeli@caeruleus.net>

	* context.el (ConTeXt-texexec-option-nonstop): New variable.
	(ConTeXt-expand-options): Use it.

2006-11-24  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (plain-TeX-enable-toolbar): Rename from
	`TeX-enable-toolbar'.
	(plain-TeX-maybe-install-toolbar): Rename from
	`TeX-maybe-install-toolbar'.
	(TeX-plain-tex-mode): Use new names.

	* doc/auctex.texi (Running TeX and friends): Explicitely mention
	`plain-TeX-enable-toolbar' and `LaTeX-enable-toolbar'.

2006-11-16  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-fill-region-as-para-do): Do not break before
	code comments if at a commented beginning of a line.

2006-10-21  Reiner Steib  <Reiner.Steib@gmx.de>
