@@ -1,3 +1,11 @@
+2006-12-10  David Kastrup  <dak@gnu.org>
+
+	* latex.el (LaTeX-section-hook): Place into `LaTeX-macro' group.
+	(LaTeX-verbatim-macros-with-delims)
+	(LaTeX-verbatim-macros-with-braces): Same here.
+	(LaTeX-verbatim-environments): Place into `LaTeX-environment'
+	group.
+
 2006-12-07  Ralf Angeli  <angeli@caeruleus.net>
 
 	* tex-bar.el (TeX-install-toolbar, LaTeX-install-toolbar): Add
